--- a/src/app/components/views/categoria/categoria-read/categoria-read.component.html
+++ b/src/app/components/views/categoria/categoria-read/categoria-read.component.html
@@ -3,29 +3,42 @@
     <h1>Categorias</h1>
   </div>
 
+  <button mat-raised-button color="primary" class="mat-elevation-z8">Adicionar Categoria</button>
+
   <table mat-table [dataSource]="categorias" class="table mat-elevation-z8">
     <!-- Position Column -->
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef>Id</th>
-      <td mat-cell *matCellDef="let row">{{row.id}}</td>
+      <td mat-cell *matCellDef="let row">{{ row.id }}</td>
     </ng-container>
 
     <!-- Name Column -->
     <ng-container matColumnDef="nome">
       <th mat-header-cell *matHeaderCellDef>Nome</th>
-      <td mat-cell *matCellDef="let row">{{row.nome}}</td>
+      <td mat-cell *matCellDef="let row">{{ row.nome }}</td>
     </ng-container>
 
     <!-- Weight Column -->
     <ng-container matColumnDef="descricao">
       <th mat-header-cell *matHeaderCellDef>Descrição</th>
-      <td mat-cell *matCellDef="let row">{{row.descricao}}</td>
+      <td mat-cell *matCellDef="let row">{{ row.descricao }}</td>
+    </ng-container>
+
+    <!-- Weight Column -->
+    <ng-container matColumnDef="livros">
+      <th mat-header-cell *matHeaderCellDef>Livros</th>
+      <td mat-cell *matCellDef="let row">
+        <a href=""><i class="material-icons">book</i></a>
+      </td>
     </ng-container>
 
     <!-- Symbol Column -->
     <ng-container matColumnDef="acoes">
       <th mat-header-cell *matHeaderCellDef>Ações</th>
-      <td mat-cell *matCellDef="let row"></td>
+      <td mat-cell *matCellDef="let row">
+        <a href=""><i class="material-icons">edit</i></a>
+        <a href=""><i class="material-icons">delete</i></a>
+      </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
