--- a/src/app/components/views/categoria/categoria-create/categoria-create.component.html
+++ b/src/app/components/views/categoria/categoria-create/categoria-create.component.html
@@ -12,6 +12,6 @@
     
     <div class="buttons">
         <button (click)="create()" mat-raised-button color="primary" class="mat-elevation-z8">Enviar</button>
-        <button mat-raised-button color="warning" class="mat-elevation-z8">Cancelar</button>
+        <button (click)="cancel()" mat-raised-button color="warning" class="mat-elevation-z8">Cancelar</button>
     </div>
 </form>
