--- a/src/app/components/views/categoria/categoria-read/categoria-read.component.html
+++ b/src/app/components/views/categoria/categoria-read/categoria-read.component.html
@@ -3,7 +3,14 @@
     <h1>Categorias</h1>
   </div>
 
-  <button mat-raised-button (click)="navegarParaCategoriaCreate()" color="primary" class="mat-elevation-z8">Adicionar Categoria</button>
+  <button
+    mat-raised-button
+    (click)="navegarParaCategoriaCreate()"
+    color="primary"
+    class="mat-elevation-z8"
+  >
+    Adicionar Categoria
+  </button>
 
   <table mat-table [dataSource]="categorias" class="table mat-elevation-z8">
     <!-- Position Column -->
@@ -37,7 +44,9 @@
       <th mat-header-cell *matHeaderCellDef>Ações</th>
       <td mat-cell *matCellDef="let row">
         <a href=""><i class="material-icons">edit</i></a>
-        <a href=""><i class="material-icons">delete</i></a>
+        <a routerLink="delete/{{ row.id }}"
+          ><i class="material-icons">delete</i></a
+        >
       </td>
     </ng-container>
 
