Update para categoria implementado

--- a/src/app/components/views/categoria/categoria-delete/categoria-delete.component.html
+++ b/src/app/components/views/categoria/categoria-delete/categoria-delete.component.html
@@ -11,7 +11,7 @@
     </mat-form-field>
     
     <div class="buttons">
-        <button (click)="delete()" mat-raised-button color="primary" class="mat-elevation-z8">Enviar</button>
+        <button (click)="delete()" mat-raised-button color="primary" class="mat-elevation-z8">Deletar</button>
         <button (click)="cancel()" mat-raised-button color="warning" class="mat-elevation-z8">Cancelar</button>
     </div>
 </form>
