--- a/src/app/components/views/categoria/categoria-read/categoria-read.component.html
+++ b/src/app/components/views/categoria/categoria-read/categoria-read.component.html
@@ -43,10 +43,12 @@
     <ng-container matColumnDef="acoes">
       <th mat-header-cell *matHeaderCellDef>Ações</th>
       <td mat-cell *matCellDef="let row">
-        <a href=""><i class="material-icons">edit</i></a>
-        <a routerLink="delete/{{ row.id }}"
-          ><i class="material-icons">delete</i></a
-        >
+        <a routerLink="update/{{ row.id }}">
+          <i class="material-icons">edit</i>
+        </a>
+        <a routerLink="delete/{{ row.id }}">
+          <i class="material-icons">delete</i>
+        </a>
       </td>
     </ng-container>
 
