--- a/src/app/components/views/home/home.component.css
+++ b/src/app/components/views/home/home.component.css
@@ -8,3 +8,13 @@
         width: 70%;
     }
 }
+
+.ok {
+    color: red;
+}
+.off {
+    background-color: brown;
+}
+.on {
+    background-color: chartreuse;
+}
